@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: OcaIDE
 Bundle-SymbolicName: Ocaml;singleton:=true
-Bundle-Version: 1.0.3
+Bundle-Version: 1.0.4
 Bundle-Activator: ocaml.OcamlPlugin
 Bundle-Localization: plugin
 Require-Bundle: org.eclipse.ui,
